fixed overflow issue on right side of configurator

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -327,7 +327,7 @@ body {
 }
 
 .configurator-body > .input-col > .options-container {
-    max-height: 100%;
+    max-height: 85%;
     background: var(--color-dark-400);
 }
 
@@ -348,6 +348,6 @@ body {
     }
 
     .configurator-body > .input-col > .options-container {
-        max-height: 85%;
+        max-height: 75%;
     }
 }
